--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -195,7 +195,7 @@
 
 \begin{exercise} \mbox{}
   \begin{enumerate}
-    \item Let $\abs{G} < \infty$. then $G$ is abelian $\iff$ each irr. rep.
+    \item Let $\abs{G} < \infty$. Then $G$ is abelian $\iff$ each irr. rep.
       of $G$ is of degree $1$.
     \item $\{ \text{the $\deg 1$ rep. of $G$} \} = \{
       \text{the irr. rep. of~} \quot{G}{[G,G]} \}$.
@@ -325,7 +325,4 @@ $\rho\otimes\rho' : G \times G' \to \text{GL}(V\otimes V')$.
   $S_3\times S_4$.
 \end{exercise}
 
-\begin{exercise}
-  Calculate the character table of $Q_8$.
-\end{exercise}
 To calculate $S_5$, $\abs{S_5} = 120 = 1^2 + 1^2 + 4^2 + 4^2 + 5^2 + 5^2 + 6^2$.
