--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -156,7 +156,7 @@
         g_ig_j = g \,\}$ which is indep. of the choice of $g$.
 
         Claim: $\lambda_\mu(C_i)\lambda_\mu(C_j) = \sum_{l=1}^k a_{i,j,l} \lambda_\mu(C_j)
-        \quad \forall i, j, \mu$. Then $\lambda_\mu(C_j)$ is aneigenvalue of
+        \quad \forall i, j, \mu$. Then $\lambda_\mu(C_j)$ is an eigenvalue of
         $A$, i.e., $\lambda_\mu(C_j)$ satisfies $\det(\lambda I - A) = 0$.
 
         \begin{align*}
@@ -202,7 +202,7 @@
   \end{enumerate}
 \end{exercise}
 
-\subsubsection{Aplications}
+\subsubsection{Applications}
 
 \begin{enumerate}
   \item $G = S_3 = D_3$, $6 = 1^2 + 1^2 + 2^2$.
@@ -216,7 +216,7 @@
         \tikz[anchor=base, baseline]{ \node(tb-chi-2) {$\chi_2$}; }
          & $1$ & $-1$ & $1$ \\
         \tikz[anchor=base, baseline]{ \node(tb-chi-3) {$\chi_3$}; }
-         & $1$ & $1$ & $1$
+         & $2$ & $0$ & $-1$
       \end{tabular}
       %\begin{tikzpicture}[overlay]
         %\node[inner sep=0pt,outer sep=0pt] (t) at ($(rho-equiv) + (2, -0.5)$) {
@@ -277,7 +277,7 @@
         \hline
         $\chi_1$ & $1$ & $1$ & $1$ & $1$ \\
         $\chi_2$ & $1$ & $\omega$ & $\omega^2$ & $1$ \\
-        $\chi_3$ & $1$ & $\omega^2$ & $\omega$ & $2\rho: G\to \text{GL}(V)$ \\
+        $\chi_3$ & $1$ & $\omega^2$ & $\omega$ & $1$ \\
         $\chi_4$ & $3$ & $0$ & $0$ & $-1$
       \end{tabular}
     \end{center}
