--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -9,7 +9,7 @@
   ($V \cong W_1 \oplus\dots\oplus W_k$)
   
   If $\tilde{\rho}: G\to \text{GL}(\tilde{W})$ is an irr. rep. then the number
-  of $\rho_i$ isomorphic to $\tilde{rho}$ is equal to
+  of $\rho_i$ isomorphic to $\tilde{\rho}$ is equal to
   $\inpd{\chi_\rho, \chi_{\tilde{\rho}}}$.
   \begin{proof}
     We know $\chi_\rho = \chi_{\rho_1} + \dots + \chi_{\rho_k}$, so
