--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -137,7 +137,7 @@
     \begin{itemize}
       \item For $\rho=\rho_i$, $\chi = \chi_i$,
         \[
-          \sum_{g\in C_j} \rho(g) = \frac{\abs{C_j}\chi(g_0)}{m_i}
+          \sT = \sum_{g\in C_j} \rho(g) = \frac{\abs{C_j}\chi(g_0)}{m_i}
           \sI_{m_i} \text{~for any~} g_0 \in C_j
         \]
         Observe that $\forall h \in G$,
