Fix product of group in week15

--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@
 \setlength{\droptitle}{-2.5cm}
 %\posttitle{\par\end{center}}  % distance between title and content
 \parindent=0pt % indent size
-%\parskip=1ex    % line space
+\parskip=1ex    % line space
 %\pagestyle{empty}  % empty: no page number
 %\pagestyle{fancy}  % fancy: fancyhdr
 
