--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -283,34 +283,62 @@
     \end{center}
 \end{enumerate}
 
-\paragraph{Product of groups}
-Let $\rho: G\to \text{GL}(V)$ and $\rho': G'\to \text{GL}(V')$.
+\begin{theorem}[Product of groups]
+For $\rho: G\to \text{GL}(V)$ and $\rho': G'\to \text{GL}(V')$, write
 $\rho\otimes\rho' : G \times G' \to \text{GL}(V\otimes V')$.
+If $\{ \rho_i \}$ are irreducible representations of $G$,
+$\{ \rho'_j \}$ are irreducible representations of $G'$, then
+$\{ \rho_i \otimes \rho'_j \}$ are exactly the irreducible
+representations of $G \times G'$.
 
-\begin{itemize}
-  \item group homo.:
-  \item $\chi_{\rho\otimes \rho'} = \chi_\rho \odot \chi_{\rhi'}:
-    (g, g') \mapsto \chi_\rho(g) \chi_{\rho'}(g')$
-  \item $\rho, \rho'$ irr. $\implies$ $\rho\otimes\rho'$ irr.:
-    歉字 (證明自己跟自己內積 $=1$)
+\begin{proof}
+  It is evidence that $\rho_i \otimes \rho'_j$ is a homomorphism, and hence
+  a representation.
 
-  \item Each irr. rep. of $G\times G'$ is isomorphic to some
-    $\rho \otimes \rho'$.
-    \begin{proof}
-      Let $\{\rho_1,\dots,\rho_k\}, \{\rho'_1,\dots,\rho'_{k'}\}$ be the sets
-      of irr. rep. of $G, G'$ respectively.
-      Write $\chi_i = \chi_{\rho_i}, \chi_i' = \chi_{\rho'_i}$.
-      
-      Claim $\Cc(G\times G') = \gen{\chi_i, \chi_j' \mid
-      i = 1,\dots,k, j = 1,\dots,k'}_\Cb = \Dc \leadsto \Dc^\perp = \{0\}$.
+  Notice that $\chi_{\rho \otimes \rho'} = \chi_\rho \odot \chi_{\rho'}$ where
+  $\chi_\rho \odot \chi_{\rho'}(g, g') = \chi_\rho(g) \chi_{\rho'}(g')$
 
-      Let $f \in \Dc^\perp$. By def,.
-      \[
-        \frac{1}{\abs{G\times G'}} \sum_{(g,g')\in G\times G'}
-        f(g,g')\ob{\chi_i(g)\chi_j'(g')} = 0
-      \]
-    \end{proof}
-\end{itemize}
+  Now we calculate 
+  \begin{align*}
+    \inpd{\chi_{\rho_1} \otimes \chi_{\rho'_1}, \chi_{\rho_2} \otimes \chi_{\rho'_2}}
+    &= \frac{1}{\abs{G}\abs{G'}} \sum_{g, g'} \chi_{\rho_1}(g) \chi_{\rho'_1}(g') 
+    \chi_{\rho_2}(g) \chi_{\rho'_2}(g')  \\
+    &= \left( \frac{1}{\abs{G}} \sum_{g} \chi_{\rho_1}(g) \chi_{\rho_2}(g) \right)
+    \left( \frac{1}{\abs{G'}} \sum_{g'} \chi_{\rho'_1}(g') \chi_{\rho'_2}(g') \right) \\
+    &= \inpd{\chi_{\rho_1}, \chi_{\rho_2}} \inpd{\chi_{\rho'_1}, \chi_{\rho'_2}}
+  \end{align*}
+
+  So $\inpd{\chi_{\rho} \otimes \chi_{\rho'}, \chi_{\rho} \otimes \chi_{\rho'}} = 1$ hence
+  each $\chi_{\rho} \otimes \chi_{\rho'}$ is irreducible.
+  And $\inpd{\chi_{\rho_1} \otimes \chi_{\rho'_1}, \chi_{\rho_2} \otimes \chi_{\rho'_2}} = 0$ 
+  if $\rho_1 \otimes \rho'_1 \neq \rho_2 \otimes \rho'_2$, and thus these representations are
+  not isomorphic.
+
+  Finally we proof that any irreducible representations of $G\times G'$ is isomorphic to some
+  $\rho \otimes \rho'$.
+
+  Let $\{\rho_1,\dots,\rho_k\}, \{\rho'_1,\dots,\rho'_{k'}\}$ be the sets
+  of irreducible representations of $G, G'$ respectively.
+  Write $\chi_i = \chi_{\rho_i}, \chi_i' = \chi_{\rho'_i}$.
+
+  Let $\Dc \triangleq \Cc(G\times G') = \gen{\chi_i, \chi_j' \mid
+    i = 1,\dots,k, j = 1,\dots,k'}_\Cb = $. We claim that $\Dc^\perp = \{0\}$.
+
+  Let $f \in \Dc^\perp$. Then
+  \begin{align*}
+    0 &= \frac{1}{\abs{G\times G'}} \sum_{(g,g')\in G\times G'}
+    f(g,g')\ob{\chi_i(g)\chi_j'(g')} \\
+    &= \frac{1}{\abs{G'}} \sum_{g'} \left( \frac{1}{\abs{G}}\sum_g f(g, g') \ob{\chi_i(g)} \right) \chi'_j(g') \\
+    &= \left\langle \frac{1}{\abs{G}} \sum_g f(g, \cdot) \ob{\chi_i(g)}, \chi'_j(g') \right\rangle
+  \end{align*}
+  Since $\rho'_j$ are othonogal basis of $\Cc(G')$, we have $\frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)}
+  = 0$ for all $g'$.
+  Again, 
+  \[ 0 = \frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)} = \inpd{f(\cdot, g'), \chi_i(g)} \]
+  Hence $f(g, g') = 0$ for all $g, g'$, which implies $f \equiv 0$.
+\end{proof}
+
+\end{theorem}
 
 \begin{exercise}
   Determine all irr. rep. of $C_n$.
