--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -56,56 +56,60 @@
     \subseteq \Cc(G)$. Then $\Cc(G) = \Dc \oplus \Dc^\perp$.
     Claim: $\Dc^\perp = \{0\}$.
 
-    Let $\varphi \in \Dc^\perp$, i.e. $\inpd{\varphi, \chi_i} = 0 \quad
+    Let $\varphi \in \Dc^\perp$, i.e. $\inpd{\varphi, \chi_i} = 0,
     \forall i = 1,\dots, l$.
-    \begin{itemize}
-      \item For $\rho: G\to \text{GL}(V),
-        \rho \cong \rho_1^{\oplus m_1} \oplus\dots\oplus\rho_l^{\oplus m_l}$
-        with $m_i = \inpd{\chi_\rho, \chi_i}$ and
-        $\chi_\rho = m_1\chi_1 + \dots + m_k\chi_l \leadsto
-        \inpd{\varphi, \chi_\rho} = 0$.
-      \item Define ${\sf T}_\rho \in \Hom_\Cb(V, V)$ by
-        \[
-          {\sf T}_\rho = \frac{1}{\abs{G}} \sum_{g\in G}
-          \ob{\varphi(g)} \rho(g)
-          \quad \leadsto \quad
-          \trace({\sf T}) = \frac{1}{\abs{G}} \sum_{g\in G}
-          \ob{\varphi(g)} \chi_\rho(g)
-          = \ob{\inpd{\varphi, \chi_\rho}} = 0
-        \]
-        $\forall h \in G$, we need 
-        ${\sf T} = \rho(h)^{-1}\circ{\sf T}\circ\rho(h)$, and
-        \begin{align*}
-          \rho(h)^{-1}\circ{\sf T}\circ\rho(h)
-          &= \frac{1}{\abs{G}} \sum_{g\in G}
-          \ob{\varphi(g)} \rho(h)^{-1}\circ\rho(g)\circ\rho(h) \\
-          &= \frac{1}{\abs{G}} \sum_{i=1}^k
-          \ob{\varphi(g_i)} \sum_{g\in C_i} \rho(h^{-1}gh) \\
-          &= \frac{1}{\abs{G}} \sum_{i=1}^k
-          \ob{\varphi(g_i)} \sum_{g'\in C_i} \rho(g') = {\sf T}_\rho
-        \end{align*}
-        where $\{C_1, \dots, C_k\}$ is the set of distinct conjugacy
-        classes in $G$.
-      \item For $\rho = \rho_i$, by Schur's lemma,
-        ${\sf T}_{\rho_i} = \lambda_i 1_{W_i}$ where
-        $\rho_i: G\to \text{GL}(W_i)$.
-        But $\trace{{\sf T}_{\rho_i}} = 0 \implies \lambda_i = 0
-        \implies {\sf T}_{\rho_i} = 0$.
-      \item In general,
-        $\rho \cong \rho_1^{\oplus m_1} \oplus\dots\oplus\rho_l^{\oplus m_l}$,
-        so ${\sf T}_{\rho_i} = 0 \implies {\sf T}_\rho = 0$.
 
-      \item In particular, $\rho = \rho^{\text{reg}}: G\to \text{GL}(V)$ with
-        $V = \bigoplus_{g\in G} \Cb e_g$. Then
-        ${\sf T}_\rho = 0 \implies {\sf T}_\rho(e_1) = 0$ and
-        \[
-          0 = {\sf T}_\rho(e_1) = \frac{1}{\abs{G}} \sum_{g\in G}
-          \ob{\varphi(g)} \rho(g)(e_1) = \frac{1}{\abs{G}} \sum_{g\in G}
-          \ob{\varphi(g)} e_g
-        \]
-        Since $\{ e_g \}$ is a basis, $\ob{\varphi(g)} = 0 \quad \forall g$.
-        That is, $\varphi = 0$. \qedhere
-    \end{itemize}
+    Write $\rho^{\text{reg}} \cong \rho_1^{\oplus m_1} \oplus\dots\oplus\rho_l^{\oplus m_l}
+    \implies \chi^{\text{reg}} = m_1\chi_1 + \dots + m_k\chi_l$.
+    By assumption, $\inpd{\varphi, \chi_\rho} = 0$.
+
+    For each $i$, define ${\sf T}_{\rho_i} \in \Hom_\Cb(V, V)$ by
+      \[
+        {\sf T}_{\rho_i} \triangleq
+        \frac{1}{\abs{G}} \sum_{g\in G} \ob{\varphi(g)} \rho_i(g)
+      \] 
+    Then we have
+      \[
+        \trace({\sf T}_{\rho_i}) =
+        \frac{1}{\abs{G}} \sum_{g\in G} \ob{\varphi(g)} \chi_\rho(g)
+        = \ob{\inpd{\varphi, \chi_\rho}} = 0
+      \]
+
+      Also, for all $h \in G$.
+      \begin{align*}
+        \rho(h)^{-1}\circ{\sf T}_{\rho_i} \circ\rho(h)
+        &= \frac{1}{\abs{G}} \sum_{g\in G}
+        \ob{\varphi(g)} \rho(h)^{-1}\circ\rho(g)\circ\rho(h) \\
+        & \stackrel{*}{=} \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(h^{-1} g h)} \rho(h^{-1}gh) \\
+        & = \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(g)} \rho(g) = \mathsf{T}_{\rho_i}
+      \end{align*}
+      Where $*$ is because $\varphi$ is a class function.  So $\mathsf{T}_{\rho_i}$ is $G$-equivariant.
+      By Schur's lemma,
+      ${\sf T}_{\rho_i} = \lambda_i 1_{W_i}$ where
+      $\rho_i: G\to \text{GL}(W_i)$. \\
+      But $\trace{{\sf T}_{\rho_i}} = 0 \implies \lambda_i = 0
+      \implies {\sf T}_{\rho_i} = 0$.
+
+      Also, because $\rho \cong \rho_1^{\oplus m_1} \oplus\dots\oplus\rho_l^{\oplus m_l}$,
+      if we define
+      \[
+        {\sf T}_{\rho^{\text{reg}}} \triangleq
+        \frac{1}{\abs{G}} \sum_{g\in G} \ob{\varphi(g)} \rho^{\text{reg}}(g)
+        \implies \mathsf{T}_{\rho^{\text{reg}}}
+        = \mathsf{T}^{\oplus m_1}_{\rho_1} \oplus \cdots \oplus
+        \mathsf{T}^{\oplus m_k}_{\rho_k} = 0
+      \] 
+
+      Finally, let $\rho = \rho^{\text{reg}}: G\to \text{GL}(V)$ with
+      $V = \bigoplus_{g\in G} \Cb e_g$.
+      Then ${\sf T}_\rho = 0 \implies {\sf T}_\rho(e_1) = 0$ and
+      \[
+        0 = {\sf T}_\rho(e_1) = \frac{1}{\abs{G}} \sum_{g\in G}
+        \ob{\varphi(g)} \rho(g)(e_1) = \frac{1}{\abs{G}} \sum_{g\in G}
+        \ob{\varphi(g)} e_g
+      \]
+      Since $\{ e_g \}$ is a basis, $\ob{\varphi(g)} = 0 \quad \forall g$.
+      That is, $\varphi \equiv 0$. \qedhere
   \end{proof}
 \end{theorem}
 
@@ -134,53 +138,80 @@
   $\forall i = 1, \dots, k, \quad \chi_i(1) = m_i \Div \abs{G}$.
 
   \begin{proof} \mbox{}
-    \begin{itemize}
-      \item For $\rho=\rho_i$, $\chi = \chi_i$,
-        \[
-          \sT = \sum_{g\in C_j} \rho(g) = \frac{\abs{C_j}\chi(g_0)}{m_i}
-          \sI_{m_i} \text{~for any~} g_0 \in C_j
-        \]
-        Observe that $\forall h \in G$,
-        \[
-          \rho(h)^{-1}\circ\sT\circ\rho(h) = \sum_{g\in C_j} \rho(h^{-1}gh)
-          \sum_{g'\in C_j} \rho(g') = \sT
-        \]
-        So $\sT$ is $G$-equivariant w.r.t. $\rho$.
-        By Schur's lemma, $\sT = \lambda \sI_{m_i}$ for some $\lambda \in \Cb$.
-        And $\trace(\sT) = \sum_{g\in C_j} \chi(g) = \abs{C_j}\chi(g_0)$
-        for any $g_0 \in C_j \leadsto \sT =
-        \frac{\abs{C_j}\chi(g_0)}{\chi_i(1)} \sI$ for $g_0 \in C_j$.
-      \item $\lambda_\mu(C_j) = \frac{\abs{C_j}\chi_\mu(g_0)}{m_\mu}$ for
-        $g_0 \in C_j$ is an algebraic integer $\forall \mu, j$:
-        For $g\in C_l$, $a_{i,j,l} \defeq$ \# of $\{\, (g_i, g_j) \in C_i \times C_j \mid
-        g_ig_j = g \,\}$ which is indep. of the choice of $g$.
+    First, we shall proof that for each $\rho=\rho_i$, $\chi = \chi_i$ and $j$, we have
+    \[
+      \sT \triangleq \sum_{g\in C_j} \rho(g) = \frac{\abs{C_j}\chi(g_0)}{m_i}
+      \sI_{m_i}, \quad \text{for any } g_0 \in C_j
+    \]
 
-        Claim: $\lambda_\mu(C_i)\lambda_\mu(C_j) = \sum_{l=1}^k a_{i,j,l} \lambda_\mu(C_j)
-        \quad \forall i, j, \mu$. Then $\lambda_\mu(C_j)$ is an eigenvalue of
-        $A$, i.e., $\lambda_\mu(C_j)$ satisfies $\det(\lambda I - A) = 0$.
+    Observe that $\forall h \in G$,
+    \[
+      \rho(h)^{-1}\circ\sT\circ\rho(h) = \sum_{g\in C_j} \rho(h^{-1}gh)
+      = \sum_{g'\in C_j} \rho(g') = \sT
+    \]
+    So $\sT$ is $G$-equivariant w.r.t. $\rho$.
 
-        \begin{align*}
-          \lambda_\mu(C_i)\lambda_\mu(C_j) I_{m_\mu}
-          &= \left(\lambda_\mu(C_i) I_{m_\mu}\right)
-             \left(\lambda_\mu(C_j) I_{m_\mu}\right)
-          = \left(\sum_{g\in C_i} \rho(g)\right)
-             \left(\sum_{g'\in C_j} \rho(g')\right) \\
-          &= \sum_{\substack{g\in C_i\\ g'\in C_j}} \rho(gg')
-          = \sum_{l=1}^k \sum_{\bar{g}\in C_l} a_{i,j,l}\rho(\bar{g}) \\
-          &= \sum_{l=1}^k a_{i,j,l} \sum_{\bar{g}\in C_l}\rho(\bar{g}) \\
-          &= \sum_{l=1}^k a_{i,j,l} \lambda_\mu(C_l) I_{m_\mu}
-       \end{align*}
-     \item $m_i = \chi_i(1) \Div \abs{G} \quad \forall i = 1, \dots, k$:
-       \begin{align*}
-         \frac{\abs{G}}{\chi_i(1)}
-         &= \frac{\abs{G}}{\chi_i(1)} \inpd{\chi_i, \chi_i} \\
-         &= \frac{\abs{G}}{\chi_i(1)} \frac{1}{\abs{G}} \sum_{g\in G}
-         \chi_i(g) \chi_i(g^{-1}) \\
-         &= \sum_{g\in G} \frac{\chi_i(g)}{\chi_i(1)} \chi_i(g^{-1}) \\
-         &= \sum_{j=1}^k \sum_{g\in C_j} \frac{\chi_i(g)}{\chi_i(1)} \chi_i(g^{-1}) \\
-         &= \sum_{j=1}^k \frac{\abs{C_j}\chi_i(g_j)}{\chi_i(1)} \chi_i(g_j^{-1})
-       \end{align*}
-    \end{itemize}
+    By Schur's lemma, $\sT = \lambda \sI_{m_i}$ for some $\lambda \in \Cb$.
+    And $\lambda = \trace(\sT) / m_i = \sum_{g\in C_j} \chi(g) / m_i = \abs{C_j}\chi(g_0) / m_i$
+    for any $g_0 \in C_j$, thus $\sum_{g \in C_j} \rho(g) = \frac{\abs{C_j}\chi(g_0)}{m_j} \sI$
+    for any $g_0 \in C_j$.
+    
+    Define $\lambda_\mu(C_i) \triangleq \abs{C_i}\chi_\mu(g_i) / m_\mu$.
+    Now, for a $g \in C_l$, define $a_{i,j,l} \triangleq \# \{\, (g_i, g_j) \in C_i \times C_j \mid
+    g_ig_j = g \,\}$, which is indep. of the choice of $g$.
+
+    We claim that $\lambda_\mu(C_i)\lambda_\mu(C_j) = \sum_{l=1}^k a_{i,j,l} \lambda_\mu(C_j)
+    ,\forall i, j, \mu$. Then 
+    \[ \lambda_\mu(C_i) 
+      \begin{bmatrix}
+        \lambda_\mu(C_1) \\
+        \vdots \\
+        \lambda_\mu(C_k) \\
+      \end{bmatrix}
+      = A
+      \begin{bmatrix}
+        \lambda_\mu(C_1) \\
+        \vdots \\
+        \lambda_\mu(C_k) \\
+      \end{bmatrix}, \quad
+      \text{where } A \triangleq
+      \begin{bmatrix}
+        a_{i, 1, 1} & \hdots & a_{i, 1, k} \\
+        \vdots & \ddots & \vdots \\
+        a_{i, k, 1} & \hdots & a_{i, 1, k} \\
+      \end{bmatrix}
+    \]
+    So $\lambda_\mu(C_j)$ is an eigenvalue of
+    $A$, i.e., $\lambda = \lambda_\mu(C_j)$ satisfies $\det(\lambda I - A) = 0$.
+    And thus $\lambda_\mu(C_i)$ is an algebraic integer.
+
+    We proof the claim by the following calculating.
+    \begin{align*}
+      \lambda_\mu(C_i)\lambda_\mu(C_j) I_{m_\mu}
+      &= \left(\lambda_\mu(C_i) I_{m_\mu}\right)
+         \left(\lambda_\mu(C_j) I_{m_\mu}\right)
+      = \left(\sum_{g\in C_i} \rho(g)\right)
+         \left(\sum_{g'\in C_j} \rho(g')\right) \\
+      &= \sum_{\substack{g\in C_i\\ g'\in C_j}} \rho(gg')
+      = \sum_{l=1}^k \sum_{\bar{g}\in C_l} a_{i,j,l}\rho(\bar{g}) \\
+      &= \sum_{l=1}^k a_{i,j,l} \sum_{\bar{g}\in C_l}\rho(\bar{g}) \\
+      &= \sum_{l=1}^k a_{i,j,l} \lambda_\mu(C_l) I_{m_\mu}
+   \end{align*}
+
+   Finally,
+   \begin{align*}
+     \frac{\abs{G}}{m_i}
+     &= \frac{\abs{G}}{m_i} \inpd{\chi_i, \chi_i} \\
+     &= \frac{\abs{G}}{m_i} \frac{1}{\abs{G}} \sum_{g\in G}
+     \chi_i(g) \chi_i(g^{-1}) \\
+     &= \sum_{g\in G} \frac{\chi_i(g)}{m_i} \chi_i(g^{-1}) \\
+     &= \sum_{j=1}^k \sum_{g\in C_j} \frac{\chi_i(g)}{m_i} \chi_i(g^{-1}) \\
+     &= \sum_{j=1}^k \frac{\abs{C_j}\chi_i(g_j)}{m_i} \chi_i(g_j^{-1}) \\
+     &= \sum_{j=1}^k \lambda_i(C_j) \chi_i(g_j^{-1}) \\
+   \end{align*}
+   and thus is an algebraic integer. \\
+   Also, $\abs{G} / m_i \in \mathbb{Q}$, so we conclude that
+   $\abs{G} / m_i \in \mathbb{Z} \implies m_i \mid \abs{G}$.
   \end{proof}
 \end{theorem}
 
