--- a/main.tex
+++ b/main.tex
@@ -278,6 +278,7 @@
 \include{multilinear/week13}
 \include{linear_repr/week14}
 \include{linear_repr/week15}
+\include{extensions/week16}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
