--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,12 @@
 \DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\trace}{Tr}
 
+% extensions
+\DeclareMathOperator{\Stab}{Stab}
+\DeclareMathOperator{\Der}{Der}
+\DeclareMathOperator{\PDer}{PDer}
+%
+
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
