--- a/main.tex
+++ b/main.tex
@@ -197,6 +197,7 @@
 \DeclareMathOperator{\Stab}{Stab}
 \DeclareMathOperator{\Der}{Der}
 \DeclareMathOperator{\PDer}{PDer}
+\DeclareMathOperator{\Ext}{Ext}
 %
 
 \newcommand{\ob}{\overline}
