--- a/extensions/week16.tex
+++ b/extensions/week16.tex
@@ -303,7 +303,7 @@ $\sigma: G \to \Aut(N)$ ($G \acts N$)
     f(u, v) + f(uv, w) = uf(v, w) + f(u, vw) \quad u, v, w \in G \} \\
   & B^2(G, N) = \{
     f: G\times G \to N \mid \exists h: G\to N \text{~with~} h(1) = 1
-    \text{s.t.}
+    \text{~s.t.~}
   f(u, v) = uh(v) - h(uv) + h(u) \quad u, v \in G \} \\
   & H^2(G, N) = \quot{Z^2(G, N)}{B^2(G, N)}
 \end{align*}
@@ -406,7 +406,7 @@ $\quot{\Stab_E(G, N)}{\Inn_E(G, N)} \cong \quot{\Der(G, N)}{\PDer(G, N)}
     K &= l(G) \\
     K' &= l'(G)
   \end{aligned}$, we get that $K$ and $K'$ are conjugate.
-\end{exericse}
+\end{exercise}
 
 \begin{definition}
   Let $R$ be a commutative ring with $1$ and $G$ be a group.
