Fix a minor bug

--- a/extensions/week16.tex
+++ b/extensions/week16.tex
@@ -374,7 +374,7 @@ Then $e(G, N) \leftrightarrow H^2(G, N)$.
       \item Conversely, \begin{exercise} proof it \end{exercise}
       \item group homo:
         $\varphi_2\circ\varphi_1(al(u)) = \varphi_2(ad_1(u)l(u))
-        = ad_1(u)\varphi_2(l(u) = a d_1(u) d_2(u) l(u)$.
+        = ad_1(u)\varphi_2(l(u)) = a d_1(u) d_2(u) l(u)$.
         That is, $\varphi_2 \circ \varphi_1 \mapsto d_1 d_2$.
         \qedhere
     \end{itemize}
