Fix a wrong symbol

--- a/linear_repr/week14.tex
+++ b/linear_repr/week14.tex
@@ -28,7 +28,7 @@
 
 \begin{example}
   A representation of degree $1$ of $G$ is $\rho: G \to \text{GL}(\Cb)
-  \cong \Cb^*$.
+  \cong \Cb^\times$.
 
   $\ord(g)$ is finite $\leadsto$ $\rho(g)^m = 1$ for some $m \in \Nb$
   $\leadsto$ $\rho(g)$ is a root of unity, i.e. $\abs{\rho(g)} = 1$.
