--- a/linear_repr/week14.tex
+++ b/linear_repr/week14.tex
@@ -382,7 +382,8 @@ Basic facts:
         Which * is due to the linearity of $\rho(g)$. Hence ${\sf T}'$ is
         also G-equivariant.
 
-        But $v \in \ker {\sf T}'$, i.e., ${\sf T}'$ is not 1-1. By 1., ${\sf T'} = 0 \implies
+        But $v \in \ker {\sf T}'$, i.e., ${\sf T}'$ is not 1-1.
+        Similar as in 1., $\ker {\sf T}' = \{0\} \text{ or } V \implies \ker {\sf T}' = V \implies {\sf T'} = 0 \implies
         T = \lambda 1_V$.
     \end{enumerate}
   \end{proof}
