--- a/multilinear/week11.tex
+++ b/multilinear/week11.tex
@@ -136,10 +136,7 @@ The right radical of $f:
       %f(v, w) = \frac{1}{4}f(v+w,v+w) - \frac{1}{4}f(v-w,v-w) = 0
     %\]
     {\color{red}
-      \[ f(v, w) = \frac{1}{2} \big( f(v+w,v+w) - f(v, v) - f(w, w) \big) = 0. \quad
-        \footnote{The argument in class requires $\Char F \geq 4$, omimi...}
-      \]
-    }
+      \[ f(v, w) = \frac{1}{2} \big( f(v+w,v+w) - f(v, v) - f(w, w) \big) = 0. \quad \footnote{The argument in class requires $\Char F \geq 4$, omimi...} \] }
     So $f = 0$, which is a contradiction.
 
     Now let $v_1 \in V$ with $f(v_1, v_1) \ne 0$. Let $W = \gen{v_1}_F$ and
