--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -77,11 +77,11 @@
 
       Also, for all $h \in G$.
       \begin{align*}
-        \rho(h)^{-1}\circ{\sf T}_{\rho_i} \circ\rho(h)
+        \rho_i(h)^{-1}\circ{\sf T}_{\rho_i} \circ\rho_i(h)
         &= \frac{1}{\abs{G}} \sum_{g\in G}
-        \ob{\varphi(g)} \rho(h)^{-1}\circ\rho(g)\circ\rho(h) \\
-        & \stackrel{*}{=} \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(h^{-1} g h)} \rho(h^{-1}gh) \\
-        & = \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(g)} \rho(g) = \mathsf{T}_{\rho_i}
+        \ob{\varphi(g)} \rho_i(h)^{-1}\circ\rho_i(g)\circ\rho_i(h) \\
+        & \stackrel{*}{=} \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(h^{-1} g h)} \rho_i(h^{-1}gh) \\
+        & = \frac{1}{\abs{G}} \sum_{g \in G} \ob{\varphi(g)} \rho_i(g) = \mathsf{T}_{\rho_i}
       \end{align*}
       Where $*$ is because $\varphi$ is a class function.  So $\mathsf{T}_{\rho_i}$ is $G$-equivariant.
       By Schur's lemma,
@@ -360,12 +360,12 @@ representations of $G \times G'$.
     0 &= \frac{1}{\abs{G\times G'}} \sum_{(g,g')\in G\times G'}
     f(g,g')\ob{\chi_i(g)\chi_j'(g')} \\
     &= \frac{1}{\abs{G'}} \sum_{g'} \left( \frac{1}{\abs{G}}\sum_g f(g, g') \ob{\chi_i(g)} \right) \chi'_j(g') \\
-    &= \left\langle \frac{1}{\abs{G}} \sum_g f(g, \cdot) \ob{\chi_i(g)}, \chi'_j(g') \right\rangle
+    &= \left\langle \frac{1}{\abs{G}} \sum_g f(g, \cdot) \ob{\chi_i(g)}, \chi'_j \right\rangle
   \end{align*}
   Since $\rho'_j$ are othonogal basis of $\Cc(G')$, we have $\frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)}
   = 0$ for all $g'$.
   Again,
-  \[ 0 = \frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)} = \inpd{f(\cdot, g'), \chi_i(g)} \]
+  \[ 0 = \frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)} = \inpd{f(\cdot, g'), \chi_i} \]
   Hence $f(g, g') = 0$ for all $g, g'$, which implies $f \equiv 0$.
 \end{proof}
 
