--- a/main.tex
+++ b/main.tex
@@ -286,6 +286,7 @@
 \include{linear_repr/week14}
 \include{linear_repr/week15}
 \include{extensions/week16}
+\include{fields/week1}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
